stye changes  - padding, upcomming events on mobile fix, etc.

--- a/app/styles/_global-styles.scss
+++ b/app/styles/_global-styles.scss
@@ -21,15 +21,6 @@ p {
   color: $text-main-color;
 }
 
-// body {
-// background-color:#f5f5f5;
-// font-family: 'Open Sans', sans-serif;
-// }
-
-// h1,h2,h3,h4,h5,h6{
-//  font-family: 'Arimo', sans-serif;
-// }
-
 h2 {
   line-height: 23px;
 }
@@ -347,65 +338,7 @@ a img:hover {
 .navbar-toggle {
   margin-bottom: auto;
 }
-/* NavBar Collapse Size*/
 
-@media (max-width: 991px) {
-
-    .navbar-right > li:nth-child(2) > a{
-      padding-left: 14px;
-      padding-right: 14px;
-    }
-
-    .navbar-right .dropdown-menu {
-    right: auto;
-    left: auto;
-    }  
-
-    .search-input {
-      display: inline-block;
-      max-width: 44%;
-    }
-
-    .navbar-header {
-        float: none;
-        height:52px;
-    }
-    .navbar-inverse {
-      min-height:52px;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin: 7.5px auto;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .navbar-text {
-        float: none;
-        margin: 15px 0;
-    }
-    /* since 3.1.0 */
-    .navbar-collapse.collapse.in { 
-        display: block!important;
-    }
-    .collapsing {
-        overflow: hidden!important;
-    }
-}
 
 .navbar-form .navbar-left {
   width: 10px;
@@ -543,9 +476,13 @@ p.ng-binding {
     border-radius: 1px;
 }
 
-h2.home-events-analisys {
-  margin-top: 30px;
-}
+// .single_post_content.events h2 {
+//   font-size: 21px;
+//   }
+
+// h2.home-events-analisys {
+//   margin-top: 0px;
+// }
 
 .single_post_content h2 span {
     background: $navbar-active-color none repeat scroll 0px 0px;
@@ -605,10 +542,17 @@ h2.home-events-analisys {
   background-color: $navbar-hover-color;
 }
 
+.pagination > li > a:active, 
+.pagination > li > span:active {
+  background-color: $navbar-active-color;
+}
+
+
 .pagination > li:last-child > a, .pagination > li:last-child > span,
 .pagination > li:first-child > a, .pagination > li:first-child > span {
     border-radius: 1px;
 }
+
 
 //Arcticles
 
@@ -963,6 +907,9 @@ footer .sociallink_nav li:nth-child(5) > a:hover {
   cursor: pointer;
 }
 
+.fc h2 {
+  padding-left: 5px;
+}
 
 //Charts
 
@@ -1166,6 +1113,7 @@ button {
   float: left;
   width: 100%;
   margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .energopedia img {
@@ -1211,6 +1159,80 @@ button {
     display: none !important;
 }
 
+
+////////////////
+
+/* NavBar Collapse Size*/
+
+@media (max-width: 991px) {
+
+    .thumbnail {
+      margin-bottom: 10px;
+    }
+
+    h2.home-events {
+      margin-top: 30px;
+    }
+
+    .single_post_content.events h2 {
+      font-size: 21px;
+    }
+
+    .navbar-right > li:nth-child(2) > a{
+      padding-left: 14px;
+      padding-right: 14px;
+    }
+
+    .navbar-right .dropdown-menu {
+    right: auto;
+    left: auto;
+    }  
+
+    .search-input {
+      display: inline-block;
+      max-width: 44%;
+    }
+
+    .navbar-header {
+        float: none;
+        height:52px;
+    }
+    .navbar-inverse {
+      min-height:52px;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px auto;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in { 
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+}
 
 
 
