--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,7 +18,8 @@ html,body {
 .wrap {
   min-height: 100%; 
   // background-image: url(/images/emi-background.jpg);
-  background-color: #F8FAFB;
+  //background-color: #F8FAFB;
+  background-color: #444;
   background-size: cover;
 }
 
